# bls-zip

./: .dockerignore  .env.example  .gitignore  BRYAN_DOCKER_OPTIONS.md  BRYAN_NODE_START_GUIDE.md  BRYAN_QUICK_START.md  BRYAN_READ_THIS.md  BRYAN_RUN_THIS.md  BRYAN_SYNC_FIX.md  BRYAN_UPDATE_NODES.md  CHANGELOG.md  CODEBASE_AUDIT_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRACT_IMPLEMENTATION_PROGRESS.md  CONTRIBUTING.md  CORE_ARCHITECTURE_GAPS.md  Cargo.toml  DEPLOYMENT.md  DOCKER.md  DOCKER_PUSH_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  E2_TEMPLATE_INTEGRATION_STATUS.md  FIRST_NODE_DEPLOYED.md  GIT_SYNC_GUIDE.md  IMPLEMENTATION_PROGRESS.md  POST_QUANTUM_ASSURANCE.md  PUSH_CHECKLIST.md  QUICKSTART.md  QUICK_FIX.md  README-DOCKER.md  README.md  SECURITY.md  STATUS.md  STRATEGIC_VALUE_ANALYSIS.md  SUPPORT.md  TECHNICAL-ARCHITECTURE.md  TRANSACTION_TESTING.md  UTXO_CONTRACT_ARCHITECTURE.md  WINDOWS_SETUP_GUIDE.md  (+20 more)
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
BLS_Explorer/: .env.example  QUICKSTART_INTEGRATION.md  README.md  middleware.ts  package-lock.json  package.json
bryan-scripts/: README.md  start-node.sh  status.sh  stop-node.sh
cli/: Cargo.toml
cli/src/: keygen.rs  main.rs  query.rs  tx.rs
consensus/: Cargo.toml
consensus/src/: difficulty.rs  error.rs  lib.rs  miner.rs  pow.rs
contracts/: README.md
core/: Cargo.toml
core/src/: account.rs  asset.rs  block.rs  contract.rs  error.rs  lib.rs  merkle.rs  proof.rs  state.rs  transaction.rs  tx_index.rs  tx_types.rs
core/tests/: contract_integration.rs
crypto/: Cargo.toml
crypto/src/: error.rs  hybrid.rs  hybrid.rs.bak  hybrid_fixed.rs  lib.rs  phe.rs  phe.rs.bak  pqc.rs  pqc_final.rs  pqc_serde.rs
enterprise/: .env.example  .gitignore  CHANGELOG.md  CONTRACT_DEPLOYMENT_DESIGN.md  Cargo.toml  DEPLOYMENT.md  E2_INTEGRATION_TESTING_GUIDE.md  README.md  SECURITY_AUDIT_REPORT.md  SETUP_GUIDE.md  docker-compose.yml  fix-m10.ps1  seed_admin.sql
enterprise/contracts/: CONTRACT_TEMPLATES_SUMMARY.md  QUICKSTART.md  README.md
enterprise/contracts/abis/: app_authorization.json  asset_escrow.json  identity_access_control.json  multisig_wallet.json
enterprise/contracts/examples/: README.md  deploy_and_test.ps1  deploy_and_test.sh  deployment_config.toml  e2_integration_example.rs
enterprise/contracts/templates/: app_authorization.rs  asset_escrow.rs  deploy.rs  identity_access_control.rs  multisig_wallet.rs
enterprise/docs/: API_DOCUMENTATION.md  INDEX.md  KEY_ROTATION_GUIDE.md  openapi.yaml
enterprise/docs/archive/: COMPLETION_SUMMARY.md  CONTRACTS_INTEGRATION_SUMMARY.md  E2_INTEGRATION_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_STATUS.md  PROJECT_SUMMARY.md  SECURITY_INTEGRATION_GUIDE.md
enterprise/examples/: secure_api_server.rs
enterprise/frontend/: .env.example  .gitignore  ADMIN_SETUP.md  FEATURE_REVIEW.md  INTEGRATION.md  README.md  SETUP.md  package-lock.json  package.json  tailwind.config.ts
enterprise/frontend/src/app/: globals.css  layout.tsx  page.tsx
enterprise/frontend/src/app/(authenticated)/: layout.tsx
enterprise/frontend/src/app/(authenticated)/admin/: page.tsx
enterprise/frontend/src/app/(authenticated)/ai-agents/: page.tsx
enterprise/frontend/src/app/(authenticated)/analytics/: page.tsx
enterprise/frontend/src/app/(authenticated)/collaboration/: page.tsx
enterprise/frontend/src/app/(authenticated)/contracts/: page.tsx
enterprise/frontend/src/app/(authenticated)/dashboard/: page.tsx
enterprise/frontend/src/app/(authenticated)/development/: page.tsx
enterprise/frontend/src/app/(authenticated)/documents/: page.tsx
enterprise/frontend/src/app/(authenticated)/identity/: page.tsx
enterprise/frontend/src/app/(authenticated)/knowledge/: page.tsx
enterprise/frontend/src/app/(authenticated)/reports/: page.tsx
enterprise/frontend/src/app/(authenticated)/trading/: page.tsx
enterprise/frontend/src/app/(authenticated)/wallet/: page.tsx
enterprise/frontend/src/app/signup/: page.tsx
enterprise/frontend/src/lib/: api.ts
enterprise/frontend/src/types/: index.ts
enterprise/migrations/: 001_create_enterprise_tables.sql  003_create_audit_log.sql  004_create_wallet_keys.sql  005_create_blockchain_sync.sql  006_add_balance_constraints.sql  007_add_session_unique_constraint.sql  008_add_locked_quantity_to_positions.sql  009_create_contracts_tables.sql  010_placeholder.sql  README.md
enterprise/mock-backend/: package-lock.json  package.json  server.js
enterprise/src/: audit.rs  db.rs  error.rs  lib.rs  models.rs  rate_limit.rs  validation.rs  wasm_loader.rs
enterprise/src/abi/: decoder.rs  encoder.rs  mod.rs  types.rs
enterprise/src/api/: application.rs  asset.rs  auth.rs  contract.rs  events.rs  hardware.rs  identity.rs  metrics.rs  mod.rs  signup.rs  wallet.rs
enterprise/src/blockchain/: mod.rs  types.rs
enterprise/src/crypto/: mod.rs
enterprise/src/keystore/: mod.rs
enterprise/src/middleware/: mod.rs  rate_limit.rs
enterprise/src/services/: application.rs  asset.rs  auth.rs  contract.rs  events.rs  hardware.rs  identity.rs  metrics.rs  mod.rs  wallet.rs
enterprise/src/transaction/: builder.rs  deployment.rs  mod.rs  signer.rs
enterprise/tests/: abi_encoding_tests.rs
frontend/: package.json
hooks/: pre-commit
node/: Cargo.toml
node/src/: blockchain.rs  config.rs  main.rs  main_old.rs  mempool.rs  metrics.rs  rpc_impl.rs
node/src/sync/: blocks.rs  headers.rs  ibd.rs  mod.rs
p2p/: Cargo.toml
p2p/src/: fix.txt  lib.rs  network.rs  peer.rs  protocol.rs  reputation.rs  service.rs
production-node/: BOOTNODE_INFO.txt  BRYAN_DEPLOYMENT_GUIDE.md  NETWORK_STATUS.md  README.md  config.toml  start-node.sh  stop-node.sh
rpc/: Cargo.toml
rpc/src/: error.rs  http_bridge.rs  lib.rs  server.rs  types.rs
scripts/: benchmark_performance.sh  test_multi_node.sh  verify_network_sync.sh
storage/: Cargo.toml
storage/src/: db.rs  error.rs  lib.rs
wasm-runtime/: Cargo.toml
wasm-runtime/src/: config.rs  error.rs  host_functions.rs  lib.rs  runtime.rs
(+80 files in other folders)
