[package]
name = "boundless-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "boundless-cli"
path = "src/main.rs"

[dependencies]
# Workspace crates
boundless-core = { path = "../core" }
boundless-crypto = { path = "../crypto" }

# Workspace dependencies
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
jsonrpsee = { workspace = true, features = ["http-client"] }
sha3.workspace = true
ed25519-dalek = "2.1"
bincode.workspace = true
chrono = "0.4"
ureq = { version = "3.1", features = ["json"] }
