[package]
name = "boundless-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Post-Quantum Cryptography with serde support
oqs = { version = "0.10", features = ["serde"] }

# Classical cryptography - using v2.x for compatibility with libp2p
x25519-dalek = { version = "2.0", features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize"] }

# Security: Memory zeroization for secret keys
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"

# Utilities
rand = "0.8"
sha3 = "0.10"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Big integer arithmetic for custom Paillier PHE implementation
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"

[dev-dependencies]
criterion = "0.5"
