[package]
name = "boundless-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
boundless-core = { path = "../core" }

# P2P Networking
libp2p.workspace = true
futures.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
bincode = "1.3"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utils
hex.workspace = true
chrono = { version = "0.4", features = ["serde"] }
