[package]
name = "boundless-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
boundless-core = { path = "../core" }
boundless-consensus = { path = "../consensus" }

# JSON-RPC
jsonrpsee.workspace = true

# HTTP REST API
axum.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utils
hex.workspace = true
sha3.workspace = true

# Security: CORS, rate limiting, and authentication
tower-http = { version = "0.6", features = ["cors", "limit"] }
tower = "0.4"
tower_governor = "0.4"
http = "1.0"
futures = "0.3"
