[package]
name = "boundless-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
boundless-core = { path = "../core" }

# Storage
rocksdb.workspace = true

# Serialization
serde.workspace = true
bincode = "1.3"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utils
hex.workspace = true

[dev-dependencies]
tempfile = "3.8"
