[package]
name = "boundless-wasm-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
# Wasmtime runtime
wasmtime = { version = "16.0", features = ["cranelift", "cache", "pooling-allocator"] }
wasmtime-wasi = "16.0"

# Workspace dependencies
boundless-core = { path = "../core" }
boundless-crypto = { path = "../crypto" }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
tokio = { version = "1.35", features = ["rt", "time", "macros"] }

[dev-dependencies]
wat = "1.0"
